<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="RTU_EM" Id="{644f77bd-c17f-4c84-9071-50f599a06aa3}">
    <Declaration><![CDATA[TYPE RTU_EM :
STRUCT
	Status: WORD;
	Operating_Hrs: REAL;
	Energy: REAL;
	Volume: REAL;
	Supply_Temp: REAL;
	Return_Temp: REAL;
	Temp_Diff: REAL;
	CommsError: BOOL;
	CommsErrorCode: INT;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>